--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ input {
 .deal{
     
     margin-left: 26%;
-    margin-top: 600px;
+    /* margin-top: 600px; */
     margin-bottom: 50px;
     border-bottom: 1px solid gray;
     padding-bottom: 10px;
@@ -228,6 +228,7 @@ input {
     border: 2px solid gray;
     border-radius: 8px;
     display: flex;
+    margin-top: -200px;
 }
 .rating i{
     color: gold;
@@ -265,6 +266,7 @@ input {
     justify-content: center;
     align-items: center;
 }
+
 .shampoo .pic{
     height: 100%;
     width: 50%;
@@ -352,6 +354,12 @@ input {
     align-items: center;
     flex-direction: column;
     margin-top: 50px;
+}
+.testinomial i{
+    color: #f49caa;
+    margin-left: -30px;
+    font-size: 20px;
+    margin-right: 5px;
 }
 .testinomial .content img{
     height: 70px;
@@ -529,6 +537,7 @@ input {
     color: gray;
     border-bottom: 1px solid gray;
     height: 35vh;
+    flex-wrap: wrap;
     
 }
 .footer2 .heading{
@@ -540,6 +549,7 @@ input {
 .popular{
     width: 20%;
     margin-left: -50px;
+    min-width: 250px;
     /* margin-top: 50px; */
 }
 .i1{
@@ -566,9 +576,311 @@ input {
 .sidebar{
     height: auto;
     width: 20%;
-    background-color: #f49caa;
-    /* position: fixed; */
-    /* z-index: 100; */
-    /* position: sticky; */
-   /* margin-top: 10x; */
+    /* background-color: #f49caa; */
+    position: sticky;
+    top: 0;
+
+}
+ .headi{
+    color: gray;
+    font-weight: bolder;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.clothes{
+    display: flex;
+}
+.sidebar1{
+    border: 1px solid gray;
+    border-radius: 8px;
+    height: 40vh;
+    margin-top: 50px;
+}
+
+.sidebar1 svg{
+    height: 20px;
+    width: 20px;
+    margin-left: 20px;
+
+}
+.sidebar1 i{
+    font-size: 10px;
+    color: gray;
+    margin-top: 5px;
+    
+}
+.sidebar1 p{
+    margin-left: 5px;
+}
+.sidebar1 .clothes{
+    margin-top: 10px;
+}
+.sidebar2{
+    border: 1px solid gray;
+    border-radius: 8px;
+    margin-top: 20px;
+    height: 50vh;
+}
+.sidebar2 img{
+    height: 55px;
+    width: 55px;
+}
+.sidebar2 .baby{
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+   
+}
+.sidebar2 .details{
+    margin-left: 20px;
+}
+.sidebar2 .rating{
+    margin-top: -70px;
+}
+.sidebar2 .name{
+    margin-top: -5px;
+    font-size: 15px;
+}
+
+
+
+
+
+
+@media only screen and (max-width:820px)  {
+    .container{
+        /* width: 100vw; */
+        /* height: 100vh; */
+    }
+   .sub-header .logo{
+        display: none;
+    }
+    .search-logo{
+        display: none;
+    }
+    .nav{
+        display: none;
+    }
+    #lens{
+        display: none;
+    }
+    #top{
+        display: none;
+    }
+    .item-box2{
+        grid-template-columns: auto auto;
+        width: 100%;
+    }
+     .item-box2 .item{
+        width: 100%;
+        margin-left: 110px;
+    }
+    
+    .sidebar{
+        display: none;
+    }
+    .item-box-new{
+        grid-template-columns: auto auto;
+    }
+    .item-box-new img{
+        margin-left: 80px;
+        margin-bottom: 10px;
+    }
+    .item-box-new .rating{
+        margin-top: -60px;
+    }
+    .testinomial{
+        flex-wrap: wrap;
+    }
+    #sh{
+        display: none;
+    }
+    .footer1{
+        width: 100%;
+        height: auto;
+    }
+    .footer1 .heading{
+        margin-left: 70px;
+    }
+    .footer1 .fas{
+        margin-left: 70px;
+        margin-right: 50px;
+    
+    }
+    #cos{
+        margin-bottom: 50px;
+
+    }
+    .footer2{
+        height: auto;
+        width: 100%;
+    }
+    .footer2 .popular{
+        /* margin-left: -170px; */
+        position: relative;
+        left: -110px;
+        /* max-width: 100px; */
+        height: auto;
+    }
+    .footer3{
+        height: auto;
+    }
+    .footer3 img{
+        margin-left: 30%;
+    }
+.copy{
+    margin-left: 30%    ;
+}
+    #pop{
+        margin-left:  110px;
+        margin-bottom: 50px;
+    }
+    #last-box-item2{
+        margin-left: 210px;
+    }
+    .item-box-new{
+        margin-left: -10px;
+        width: 100%;
+    }
+    .container .new{
+        margin-left: -1%;
+        margin-top: 40px;
+        border-bottom: 1px solid gray;
+        font-size: 20px;
+        font-weight: bold;
+        width: 100%
+    }
+  
+    .shampoo{
+        margin-left: -5px;
+        margin-top: 100px;
+        width: 100%;
+        height: 60vh;
+    }
+    .deal{
+        left: -150px;
+        position: relative;
+        top: 50px;
+        width: 100%;
+    }
+    .shampoo img{
+        /* margin-top: 80px; */
+    }
+    .item-box2{
+        left: -100px;
+        position: relative;
+    }
+     .container .heading1{
+        
+        /* left: 55px; */
+        border: none;
+        position: relative;
+        border-bottom: 1px solid gray;
+        width: 100%;
+        margin-left: 5px;
+    }
+    .heading1 .new{
+        border:none;
+        font-size: 20px;
+         width: 100vw;
+        left: -30px;
+        
+    }
+    .frock{
+        width: 350px;
+    }
+  .testinomial{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .testinomial .alan{
+    width: 80%;
+  }
+  .alan img{
+    height: 150px;
+    width: 150px;
+  }
+  .alan .name{
+    font-weight: bold;
+    font-size: 50px;
+  }
+  .alan .ceo{
+    font-size: 30px;
+  }
+  .alan .quotes{
+    height: 100px;
+    width: 100px;
+  }
+  .alan .text{
+    font-size: 30px;
+  }
+  .alan .heading{
+    font-size: 30px;
+  }
+  .banner2{
+    height: 150%;
+    width: 80%;
+    margin-left: 0px;
+  }
+  .banner2 .coll{
+    top: -110px;
+    position: relative;
+    left: -20px;
+  }
+  .content2{
+    width: 80%;
+    /* display: flex; */
+    height: 40vh;
+    margin-left: 0px;
+  }
+  .content2 .heading{
+    height: 15%;
+    /* background-color: #f49caa; */
+    font-size: 30px;
+  }
+}
+
+
+
+/* for phone */
+
+
+@media only screen and (max-width:667px) {
+    .sub-header .logo{
+        display: none;
+    }
+    .sub-header .left-nav{
+        display: none;
+    }
+    .search-logo{
+        display: none;
+    }
+    .search-header{
+        flex-wrap: wrap;
+    }
+    .nav{
+        display: none;
+    }
+    #lens1{
+        display: none;
+    }
+    #top{
+        display: none;
+    }
+    .item-box2{
+        grid-template-columns: auto auto;
+    }
+    .sidebar{
+        display: none;
+    }
+    .item-box-new{
+        grid-template-columns: auto auto;
+    }
+    .testinomial{
+        flex-wrap: wrap;
+    }
+    #sh{
+        display: none;
+    }
 }
