--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@
     justify-content: space-between;
     color: gray;
     align-items: center;
-    font-size: 15px;
+    font-size: 0.8em;
+}
+.sub-header.text{
+    min-width: 50%;
 }
 .logo{
     min-width: 200px;
@@ -645,9 +648,10 @@ input {
 
 
 
+/* For Tab */
 
-
-@media only screen and (max-width:820px)  {
+@media only screen and (max-width:1180px)  {
+    
     .container{
         /* width: 100vw; */
         /* height: 100vh; */
@@ -792,7 +796,7 @@ input {
   .testinomial{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 70%;
   }
   .testinomial .alan{
     width: 80%;
@@ -838,7 +842,7 @@ input {
     height: 15%;
     /* background-color: #f49caa; */
     font-size: 30px;
-  }
+}
 }
 
 
@@ -846,7 +850,7 @@ input {
 /* for phone */
 
 
-@media only screen and (max-width:667px) {
+@media only screen and (max-width:480px) {
     .sub-header .logo{
         display: none;
     }
