--- a/style.css
+++ b/style.css
@@ -17,17 +17,14 @@
     justify-content: space-between;
     color: gray;
     align-items: center;
-    font-size: 0.8em;
-}
-.sub-header.text{
-    min-width: 50%;
+    /* font-size: 1.5em; */
 }
 .logo{
     min-width: 200px;
 }
-.text{
-    width: 30%;
-    min-width: 100px;
+.sub-header .text{
+    /* width: 30%;.na */
+    min-width: 500px;
 }
 .logo i{
     background-color: #f2f2f2;
@@ -54,7 +51,7 @@
     margin-left: 10%;
 }
 .search-header .icon{
-    font-size: 35px;
+    font-size: 2em;
     color: #f49caa;
 }
 .search{
@@ -76,7 +73,7 @@ input {
     width: 200px;
     justify-content: space-around;
     color: gray;
-    font-size: 30px;
+    font-size: 2em;
 }
 .banner{
     background-image: url('/images/banner-1.jpg');
@@ -95,10 +92,12 @@ input {
     margin-left: 15%;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-size: 0.8em;
     font-weight: bold;
 }
 .banner .text{
     margin-left: 50px;
+    font-size: 0.5rem;
 }
 #trend{
     color: #f49caa;
@@ -112,6 +111,7 @@ input {
     display: flex;
     align-items: center;
     width: 100%;
+    /* font-size: 1em; */
 }
 .frock{
     width: 23%;
@@ -120,6 +120,9 @@ input {
     border: 1px solid gray;
     border-radius: 5px;
     margin-left: 2.5%;
+    position: relative;
+    align-items: center;
+    /* font-size: 2.5em; */
 }
 .frock .image{
     height: 40px;
@@ -129,16 +132,19 @@ input {
     margin: 13px 0px 13px 13px;
     border-radius: 5px;
     padding: 8px;
+    min-width: 40px;
+    min-height: 40px;
 }
  .frock .text{
     display: flex;
     flex-direction: column;
-    font-size: 13px;
+    font-size: 1em;
     font-weight: bold;
     margin-bottom: 5px;
-    margin-left: 10px;
+    margin-left: 20px;
     margin-top: 13px;
     height: 90%;
+    justify-content: center;
 }
 
 .show{
@@ -146,25 +152,29 @@ input {
     color: #f49caa;
 }
 .quantity{
-    margin-left: 60px;
-    margin-top:13px ;
+    position: absolute;
+    right: 10px;
+    top:33px ;
+    font-size: 1.5em;
 }
-.container .heading1{
+ .heading1{
     display: flex;
-    width:74.5% ;
+    width:73.5% ;
     
     margin-left: 25.5%;
     margin-top: 50px;
-    font-size: 20px;
+    /* font-size: 5rem; */
     font-weight: bold;
     border-bottom: 1px solid gray;
     
 }
 .heading1 .new{
     position: relative;
-    left: -230px;
+    left: -200px;
     width: 200px;
     border-bottom: 0px;
+    font-size: 1.5em;
+    /* color: #f49caa; */
 
 }
 .item-box2{
@@ -173,7 +183,7 @@ input {
     height: auto ;
     float: right;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 32% 32% 32%;
     gap: 20px;
     margin-top: 50px;
 
@@ -182,6 +192,8 @@ input {
     height: 50px;
     width: 50px;
     margin-left: 10px;
+    min-height: 80px;
+    min-width: 80px;
 }
 .item-box2 .item{
     display: flex;
@@ -192,6 +204,7 @@ input {
 }
 .item .details{
     margin-left: 10px;
+    font-size: 1em;
 }
 .item .item-name{
     font-weight: bold;
@@ -206,7 +219,7 @@ input {
 .price span{
     color: gray;
     text-decoration: line-through;
-    font-size: 10px;
+    font-size: 1em;
 }
 .heading{
     margin-top: 50px;
@@ -214,12 +227,12 @@ input {
 .deal{
     
     margin-left: 26%;
-    /* margin-top: 600px; */
+    margin-top: -100px;
     margin-bottom: 50px;
     border-bottom: 1px solid gray;
     padding-bottom: 10px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.8em;
     font-weight: bold;
 }
 
@@ -231,7 +244,8 @@ input {
     border: 2px solid gray;
     border-radius: 8px;
     display: flex;
-    margin-top: -200px;
+    /* margin-top: -100px; */
+    
 }
 .rating i{
     color: gold;
@@ -242,6 +256,7 @@ input {
 }
 .content p{
     color: gray;
+    font-size: 0.5em;
 }
 .content button{
     background-color: #f49caa;
@@ -257,17 +272,19 @@ input {
     width: 60%;
     justify-content: space-between;
     margin-top: 20px;
+    font-size: 0.5em;
 }
 .time .days{
     /* border: 1px solid gray; */
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
     /* color: #f49caa; */
     background-color: lightgray;
     border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 1em;
 }
 
 .shampoo .pic{
@@ -276,22 +293,24 @@ input {
 }
 .shampoo .content{
     width: 50%;
+    font-size: 1.5em;
 }
 .item-box-new{
     /* background-color: #f49caa; */
     width:74.5% ;
-    margin-left: 25.5%;
+    margin-left: 10.5%;
     display: grid;
     grid-template-columns: auto auto auto auto;
     column-gap: 30px;
     row-gap: -20px;
     height: auto;
+    font-size: 1em;
     
 }
 .container .new{
-    margin-left: 25.5%;
+    margin-left: 23.5%;
     margin-top: 40px;
-    border-bottom: 1px solid gray;
+    /* border-bottom: 1px solid gray; */
     font-size: 20px;
     font-weight: bold;
 }
@@ -309,6 +328,7 @@ input {
     height: 150px;
     width: 150px;
     margin-left: 20px;
+    margin-left: 100px;
     /* display: flex; */
     /* justify-content: center; */
 
@@ -331,6 +351,7 @@ input {
     margin-left: 20px;
     color: black;
     color: gray;
+    bottom: 50px;
 }
 .testinomial{
     width: 80%;
@@ -338,6 +359,7 @@ input {
     margin-left: 10%;
     display: flex;
     margin-top: -60px;
+    font-size: 1em;
 }
 .testinomial .alan{
     width: 30%;
@@ -487,16 +509,17 @@ input {
 .last-box{
     display: flex;
     width: 73%;
-    margin-left: 10%;
+    margin-left: 17%;
     margin-top: 50px;
+    font-size: 1.5em;
 }
 .last-box .item{
     width:25%;
     margin-left: 30px;
 }
 .last-box img{
-    height: 150px;
-    width: 300px;
+    height: 250px;
+    width: 100%;
     border-radius: 8px;
 }
 .last-box .type{
@@ -520,6 +543,7 @@ input {
     flex-direction: column;
     margin-top: 50px;
     border-bottom: 1px solid gray;
+    font-size: 1em;
 }
 
 .footer1 .heading{
@@ -541,11 +565,12 @@ input {
     border-bottom: 1px solid gray;
     height: 35vh;
     flex-wrap: wrap;
-    
+    font-size: 1em;
+    width: 100%;
 }
 .footer2 .heading{
     border-bottom: 0px;
-    font-size: 15px;
+    font-size: 2empx;
     color: white;
     margin-left: 70px;
 }
@@ -565,15 +590,21 @@ input {
 .footer3{
     height: 15vh;
     background-color: black;
-
+    font-size: 1em;
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 .footer3 img{
-    margin-left: 38%;
-    margin-top: 25px;
+    /* margin-left: 38%; */
+    /* margin-top: 25px; */
 }
 .copy{
     color: gray;
-    margin-left: 38%;
+    /* margin-left: 38%; */
     margin-top: 10px;
 }
 .sidebar{
@@ -589,6 +620,7 @@ input {
     font-weight: bolder;
     margin-top: 20px;
     margin-left: 20px;
+    font-size: 1em;
 }
 .clothes{
     display: flex;
@@ -596,24 +628,27 @@ input {
 .sidebar1{
     border: 1px solid gray;
     border-radius: 8px;
-    height: 40vh;
+    height: 43vh;
     margin-top: 50px;
 }
 
-.sidebar1 svg{
-    height: 20px;
-    width: 20px;
+.sidebar1 img{
+    height: 25px;
+    width: 30px;
     margin-left: 20px;
 
 }
 .sidebar1 i{
-    font-size: 10px;
+    font-size: 0.8em;
     color: gray;
     margin-top: 5px;
+    position: absolute;
+    right: 10px;
     
 }
 .sidebar1 p{
     margin-left: 5px;
+    font-size: 1em;
 }
 .sidebar1 .clothes{
     margin-top: 10px;
@@ -623,10 +658,11 @@ input {
     border-radius: 8px;
     margin-top: 20px;
     height: 50vh;
+    font-size: 1em;
 }
 .sidebar2 img{
-    height: 55px;
-    width: 55px;
+    height: 60px;
+    width: 60px;
 }
 .sidebar2 .baby{
     display: flex;
@@ -642,7 +678,7 @@ input {
 }
 .sidebar2 .name{
     margin-top: -5px;
-    font-size: 15px;
+    /* font-size: 2.5em; */
 }
 
 
@@ -651,11 +687,6 @@ input {
 /* For Tab */
 
 @media only screen and (max-width:1180px)  {
-    
-    .container{
-        /* width: 100vw; */
-        /* height: 100vh; */
-    }
    .sub-header .logo{
         display: none;
     }
@@ -665,6 +696,13 @@ input {
     .nav{
         display: none;
     }
+    .item-box{
+        width: 100%;
+    }
+    .item-box .frock{
+        width: 50%;
+        margin-left: 10px;
+    }
     #lens{
         display: none;
     }
@@ -672,12 +710,13 @@ input {
         display: none;
     }
     .item-box2{
-        grid-template-columns: auto auto;
+        grid-template-columns: 50% 50%;
         width: 100%;
+        gap: 5%;
     }
      .item-box2 .item{
         width: 100%;
-        margin-left: 110px;
+        margin-left: 50px;
     }
     
     .sidebar{
@@ -685,6 +724,7 @@ input {
     }
     .item-box-new{
         grid-template-columns: auto auto;
+        
     }
     .item-box-new img{
         margin-left: 80px;
@@ -718,12 +758,13 @@ input {
     .footer2{
         height: auto;
         width: 100%;
+       
     }
     .footer2 .popular{
         /* margin-left: -170px; */
-        position: relative;
+        /* position: relative; */
         left: -110px;
-        /* max-width: 100px; */
+        max-width: 100px;
         height: auto;
     }
     .footer3{
@@ -736,67 +777,61 @@ input {
     margin-left: 30%    ;
 }
     #pop{
-        margin-left:  110px;
+        /* margin-left:  110px; */
         margin-bottom: 50px;
     }
     #last-box-item2{
         margin-left: 210px;
     }
+    .last-box .item{
+        width: 50%;
+        margin-left: -20px;
+    }
     .item-box-new{
         margin-left: -10px;
         width: 100%;
     }
-    .container .new{
-        margin-left: -1%;
+    .container .heading1 .new{
+        /* margin-left: -1%; */
         margin-top: 40px;
-        border-bottom: 1px solid gray;
-        font-size: 20px;
+        /* border-bottom: 1px solid gray; */
+        font-size: 0.5em;
         font-weight: bold;
         width: 100%
     }
   
     .shampoo{
-        margin-left: -5px;
-        margin-top: 100px;
+        margin-left: 0.0px;
+        margin-top: 2000px;
         width: 100%;
-        height: 60vh;
+        height: auto;
+    }
+    .shampoo .pic{
+        height: 100%;
+        width: 100%;
+        margin-top: 10%;
+    }
+    .shampoo .time{
+        margin-bottom: 20px;
     }
     .deal{
-        left: -150px;
+        left: -240px;
         position: relative;
-        top: 50px;
+        top: 1950px;
         width: 100%;
     }
-    .shampoo img{
-        /* margin-top: 80px; */
-    }
+    
     .item-box2{
-        left: -100px;
+        left: -50px;
         position: relative;
-    }
-     .container .heading1{
-        
-        /* left: 55px; */
-        border: none;
-        position: relative;
-        border-bottom: 1px solid gray;
-        width: 100%;
-        margin-left: 5px;
-    }
-    .heading1 .new{
-        border:none;
-        font-size: 20px;
-         width: 100vw;
-        left: -30px;
-        
-    }
-    .frock{
-        width: 350px;
+        display: grid;
+        grid-template-columns: auto auto ;
     }
   .testinomial{
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 80%;
+    margin-left: 17%;
   }
   .testinomial .alan{
     width: 80%;
@@ -823,20 +858,36 @@ input {
     font-size: 30px;
   }
   .banner2{
-    height: 150%;
+    height: 50vh;
     width: 80%;
     margin-left: 0px;
   }
   .banner2 .coll{
-    top: -110px;
+    top: -30px;
     position: relative;
-    left: -20px;
+    /* left: -20px; */
+    align-items: center;
+  }
+  .coll .discount{
+    margin-top: 20%;
   }
   .content2{
     width: 80%;
+    font-size: 1.2rem;
+    /* align-items: center; */
     /* display: flex; */
     height: 40vh;
     margin-left: 0px;
+    position: relative;
+    /* bottom: 0px; */
+    top: -50px;
+  }
+  .content2 .head{
+    margin-left: 250px;
+    /* position: absolute; */
+  }
+  .content2 .des{
+    margin-left: 250px;
   }
   .content2 .heading{
     height: 15%;
