--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ input {
 .item-box-new{
     /* background-color: #f49caa; */
     width:74.5% ;
-    margin-left: 10.5%;
+    margin-left: 25.5%;
     display: grid;
     grid-template-columns: auto auto auto auto;
     column-gap: 30px;
@@ -326,9 +326,11 @@ input {
 }
 .item-box-new img{
     height: 150px;
+    width: 250px;
+    height: 150px;
     width: 150px;
     margin-left: 20px;
-    margin-left: 100px;
+    /* margin-left: 100px; */
     /* display: flex; */
     /* justify-content: center; */
 
